feat: Move token parsing to middleware
