# internal/adapters/primary/rest/response/cars.go
@@ -2,6 +2,8 @@ package response
 
 import "cars/internal/domain/cars"
 
+// Create
+
 type CreateCar struct {
 	ID uint64 `json:"id"`
 }
@@ -9,5 +11,17 @@ type CreateCar struct {
 func NewCreateCar(r *cars.CreateRes) *CreateCar {
 	return &CreateCar{
 		ID: r.ID,
+	}
+}
+
+// Get
+
+type GetCars struct {
+	Cars []*cars.Car `json:"cars"`
+}
+
+func NewGetCars(r *cars.GetRes) *GetCars {
+	return &GetCars{
+		Cars: r.Cars,
 	}
 }
